update dm tien dat

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,3 +1,3 @@
 database.url = jdbc:sqlserver://localhost:1433;DatabaseName=QuanLyVeTauDB;encrypt=false;trustServerCertificate=true
 database.user = sa
-database.password = 123456789
+database.password = sapassword
