--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,17 @@
     </properties>
 
     <dependencies>
+    <dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.5</version>
+</dependency>
+
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml-lite</artifactId>
+    <version>5.2.5</version>
+</dependency>
         <!-- JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
